--- a/css/login.css
+++ b/css/login.css
@@ -15,4 +15,10 @@ body {
 }
 .h:hover{
        text-decoration: underline;
-    }
+}
+.display-yes{
+    display: block !important;
+}
+.display-none{
+    display: none !important;
+}
